--- a/src/components/Link/Link.module.scss
+++ b/src/components/Link/Link.module.scss
@@ -7,6 +7,8 @@
   text-transform: uppercase;
   padding: 0.75rem;
   transition: 300ms;
+  text-align: center;
+  width: 100%;
 
   &:hover {
     color: var(--red);
